Fix CSS Gap

--- a/app-brewery-server/public/project34/styles/main.css
+++ b/app-brewery-server/public/project34/styles/main.css
@@ -53,7 +53,7 @@
 .youlist-container {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    /* gap: 2rem; */
 }
 
 .movie-list-grid {
